public/style.css
/*****************************
  basic
*****************************/
html{
	font-family: sans-serif;
}

/*****************************
  cards
*****************************/
md-card{ outline: none; }
md-card-content{
	white-space: pre-wrap;
	word-break: break-word;
	margin: -15px 0;
	font-size: 0.9em;
}
md-card-content pre{
	white-space: pre-wrap;
	word-break: break-word;
}
md-card-content h1,
md-card-content h2,
md-card-content h3,
md-card-content h4,
md-card-content h5,
md-card-content h6,
md-card-content p,
md-card-content ul,
md-card-content ol{
	margin: -8px 0;
	padding: 0px 0;
}
md-card-content ul,
md-card-content ol{ padding: 0px 20px; }
md-card-content ul ul,
md-card-content ul ol,
md-card-content ol ul,
md-card-content ol ol{ margin-bottom: -23px; }
md-card-content li{ margin: -8px 0; }
md-card-content a{
	color: #2196F3;
	text-decoration: none;
}
md-card-content a:visited{ color: #9C27B0; }
md-card-content a:hover{ color: #8BC34A; }
i{
	display: block;
	margin-top: -16px;
	color: gray;
	font-size: 0.9em;
}
md-card-content img{ max-width: 100%; }
md-card-content code{
	display: inline-block;
	margin: 2px 0;
	background: #eee;
	border-radius: 2px;
	padding: 3px;
}
md-card-content pre code{
	display: block;
	padding: 5px;
	margin-top: -10px;
}
md-card-content blockquote{
	color: gray;
	border-left: 2px solid #eee;
	margin: 0px;
	padding: 3px 15px;
	max-width: 100%;
}
md-card-content hr{
	border: none;
	height: 1px;
	background: #eee;
	margin: 2px;
}

/*****************************
  icons
*****************************/
md-card-avatar .material-icons.Red{ background: rgb(244,67,54); }
md-card-avatar .material-icons.Orange{ background: #FF9800; }
md-card-avatar .material-icons.Yellow{ background: #FFC107; }
md-card-avatar .material-icons.Green{ background: #8BC34A; }
md-card-avatar .material-icons.Blue{ background: #2196F3; }
md-card-avatar .material-icons.Purple{ background: #9C27B0; }

/*****************************
  menu
*****************************/
md-fab-speed-dial{
	position: fixed !important;
	z-index: 10000;
}
md-tooltip{ z-index: 10000 }
md-toolbar{ box-shadow: 3px 3px 5px rgba(0,0,0,0.3); }
md-content{ box-sizing: border-box; }

/*****************************
  containers and placement
*****************************/
.mobile_container{
	width: 100vw;
	overflow-x: scroll;
	/* Not available in Chrome yet */
	/*scroll-snap-points-x: repeat(100vw);
	scroll-snap-type: mandatory;*/
}
.full-row{
	height: 100vh;
	width: 300vw;
}
md-toolbar{
	min-height: 8vh;
	max-height: 8vh;
}
md-content{
	height: 92vh;
	overflow-y: scroll;
	padding-bottom: 100px;
}
.menu_background{
	height: 100vh;
	width: 100vw;
	z-index: 2;
	background: rgba(255,255,255,0.3);
	position: fixed;
}

/*****************************
  mobile stuff
*****************************/
@media screen and (min-width: 600px){
	md-dialog{ min-width: 40%; }
	.full-row{ width: 100vw; }
	md-content{ padding-bottom: 0px; }
	.pad{ padding-bottom: 100px; }
	.login{ flex: .33; }
}

